Update schedule page with new changes

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -15,7 +15,8 @@
         margin-top: 20px;
       }
 
-      th, td {
+      th,
+      td {
         border: 1px solid #000;
         padding: 10px;
         text-align: left;
@@ -26,7 +27,8 @@
         margin-bottom: 10px;
       }
 
-      header, footer {
+      header,
+      footer {
         background-color: #f4f4f4;
         padding: 10px 0;
         text-align: center;
@@ -69,7 +71,9 @@
 
     <main>
       <table>
-        <caption>Detailed Schedule of Events for TechCon 2024</caption>
+        <caption>
+          Detailed Schedule of Events for TechCon 2024
+        </caption>
         <thead>
           <tr>
             <th scope="col">Time</th>
@@ -108,7 +112,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+      <p>&copy; 2024 TechCon. All rights reserved. copyright.</p>
     </footer>
   </body>
 </html>
