--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -97,7 +97,7 @@
     <main>
       <section>
         <h2>Contact Information</h2>
-        <p>Email: <a href="mailto:owaganoah4@gmail.com">noahowaga@gmail.com</a></p>
+        <p>Email: <a href="mailto:owaganoah4@gmail.com">owaganoah4@gmail.com</a></p>
         <div class="social">
           <p>Follow us:</p>
           <a href="https://twitter.com/TechCon" target="_blank">Twitter</a>
